hands-on/istio/lab5-fault-injection/virtualservices-error.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: m-caj-virtual-service
spec:
  gateways:
  - m-caj-istio-gateway
  hosts:
  - ${STUDENT_ID}-caj-app.istio-gateway.apps.cluster-zghzl.zghzl.sandbox852.opentlc.com
  http:
  - match:
    - uri:
        prefix: /api/v1/versions
    route:
    - destination:
        host: m-caj-masterfile
        port:
          number: 8080
        subset: v1
      weight: 100
  - match:
    - uri:
        prefix: /api/v1/stations
    route:
    - destination:
        host: m-caj-masterfile
        port:
          number: 8080
        subset: v1
      weight: 100
  - match:
    - uri:
        prefix: /api/v1/schedules
    route:
    - destination:
        host: m-caj-schedule
        port:
          number: 8080
        subset: v1
      weight: 100
  - match:
    - uri:
        prefix: /api/v1/reservations
    route:
    - destination:
        host: m-caj-reservation
        port:
          number: 8080
        subset: v1
      weight: 100
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: m-caj-mock-tvm
        port:
          number: 8080
        subset: v1
      weight: 100
